--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div id="bg"></div>
     <h1>Pub Halls</h1>
-
+    <p>a test</p>
 
     
     <script type="text/javascript" src="js/particles.min.js"></script>
