--- a/index.html
+++ b/index.html
@@ -8,9 +8,30 @@
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-    
     <div id="bg"></div>
-    <h1>Pub Halls</h1>
+    <div class="navbar">
+       <a class="current" href="">Home</a>
+       <a href="">FAQ</a>
+       <a href="">Guides</a>
+       <a href="">Contact Us</a>
+    </div>
+    <main class="pusbal">
+        <div class="afk">
+            <h1>Afk Checks</h1>
+        </div>
+        <div class="runs">
+            <h1>In Run</h1>
+        </div>
+        <div class="news" id="news">
+            <h1>News/Announcements</h1>
+        </div>
+        <div class="servers">
+            <h1>Our servers</h1>
+        </div>
+        <div class="something">
+            <h1>something</h1>
+        </div>
+    </main>
     <p>a test</p>
 
     
