--- a/index.html
+++ b/index.html
@@ -26,10 +26,12 @@
             <h1>News/Announcements</h1>
         </div>
         <div class="servers">
-            <h1>Our servers</h1>
+            <h1>Our server</h1>
+            <iframe src="https://discord.com/widget?id=343704644712923138&theme=dark" width="350" height="350" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
         </div>
         <div class="something">
             <h1>something</h1>
+            
         </div>
     </main>
     <p>a test</p>
