--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="bg"></div>
     <div class="navbar">
+        <img src="https://cdn.discordapp.com/attachments/420322594604974080/1027978651448397885/PubHallsLogo.png" alt="PubHallsLogo">
        <a class="current" href="">Home</a>
        <a href="">FAQ</a>
        <a href="">Guides</a>
