Added image file, and Most of the work on FAQ is done.

--- a/aboutsus/aboutus.html
+++ b/aboutsus/aboutus.html
@@ -10,7 +10,7 @@
 <body>
     <div id="bg"></div>
     <div class="navbar">
-        <img src="https://cdn.discordapp.com/attachments/420322594604974080/1027978651448397885/PubHallsLogo.png" alt="PubHallsLogo">
+        <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
        <a href="../index.html">Home</a>
        <a href="../Faq/faq.html">FAQ</a>
        <a href="../guides/guides.html">Guides</a>
