--- a/Faq/faq.html
+++ b/Faq/faq.html
@@ -16,6 +16,15 @@
        <a href="../guides/guides.html">Guides</a>
        <a href="../aboutsus/aboutus.html">About-us</a>
     </div>
+    <div class="small">
+        <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
+        <button onclick="droplist()" class="dbut ">About-us<i class="fa fa-caret-down"></i></button>
+        <div id="mydroplist" class="drop-content">
+            <a href="../index.html">Home</a>
+            <a href="../Faq/faq.html">FAQ</a> 
+            <a href="../guides/guides.html">Guides</a>
+        </div>
+    </div>
     <h1 class="first-halls">Pub Halls</h1>
     <main>
         <div class="box">
@@ -76,7 +85,6 @@
     </main>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
-    <script src="java.js"></script>
-
+    <script src="../java.js"></script>
 </body>
 </html>
