--- a/aboutsus/aboutus.html
+++ b/aboutsus/aboutus.html
@@ -14,12 +14,29 @@
        <a href="../index.html">Home</a>
        <a href="../Faq/faq.html">FAQ</a>
        <a href="../guides/guides.html">Guides</a>
-       <a class="current" href="aboutus.html">About-us</a>
+       <a class="current" id="#droplist">About-us</a>
+    </div>
+    <div class="small">
+        <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
+        <button onclick="droplist()" class="dbut ">About-us<i class="fa fa-caret-down"></i></button>
+        <div id="mydroplist" class="drop-content">
+            <a href="../index.html">Home</a>
+            <a href="../Faq/faq.html">FAQ</a> 
+            <a href="../guides/guides.html">Guides</a>
+        </div>
     </div>
     <h1 class="first-halls">Pub Halls</h1>
+    <div class="box">
+        <h3>What is Pub Halls?</h3>
+        <p>Pub Halls is the biggest and the most newbie friendly discord server community out there!</p>
+        <p>a place where we provide high quality raiding 24/7 that includes all kinds of exaltation and miscellaneous dungeons.</p>
+        <h3>Who are we?</h3>
+        <p>The Pub Halls staff team is a volunteer based community where everyone invests their time to improve the experience that you get here, a group of different minded yet open minded people that strives for improvement.</p>
+        
+    </div>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
-    <script src="java.js"></script>
+    <script src="../java.js"></script>
 
 </body>
 </html>
