--- a/guides/guides.html
+++ b/guides/guides.html
@@ -16,10 +16,19 @@
        <a class="current" href="guides.html">Guides</a>
        <a href="../aboutsus/aboutus.html">About-us</a>
     </div>
+    <div class="small">
+        <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
+        <button onclick="droplist()" class="dbut ">About-us<i class="fa fa-caret-down"></i></button>
+        <div id="mydroplist" class="drop-content">
+            <a href="../index.html">Home</a>
+            <a href="../Faq/faq.html">FAQ</a> 
+            <a href="../guides/guides.html">Guides</a>
+        </div>
+    </div>
     <h1 class="first-halls">Pub Halls</h1>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
-    <script src="java.js"></script>
+    <script src="../java.js"></script>
 
 </body>
 </html>
