Guides somewhat done

--- a/guides/guides.html
+++ b/guides/guides.html
@@ -26,6 +26,11 @@
         </div>
     </div>
     <h1 class="first-halls">Pub Halls</h1>
+    <div class="box">
+        <h1 class="guide-name">A VERY detailed Lost Halls guide.</h1>
+        <center><iframe class="video" src="https://www.youtube.com/embed/Q7SeL3OzO2o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></center>
+        <h1 class="guide-name">More is on the way!</h1>
+    </div>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
     <script src="../java.js"></script>
