more changes, fixed navbar links aswell.

--- a/guides/guides.html
+++ b/guides/guides.html
@@ -18,11 +18,11 @@
     </div>
     <div class="small">
         <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
-        <button onclick="droplist()" class="dbut ">About-us<i class="fa fa-caret-down"></i></button>
+        <button onclick="droplist()" class="dbut ">Guides</button>
         <div id="mydroplist" class="drop-content">
             <a href="../index.html">Home</a>
             <a href="../Faq/faq.html">FAQ</a> 
-            <a href="../guides/guides.html">Guides</a>
+            <a href="../guides/guides.html">About-us</a>
         </div>
     </div>
     <h1 class="first-halls">Pub Halls</h1>
