--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <title>Pub Halls</title>
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
-<>
     <div id="bg"></div>
     <div class="navbar">
         <img src="images/PubHallsLogo.png" alt="PubHallsLogo">
@@ -18,11 +17,11 @@
     </div>
     <div class="small">
         <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
-        <button onclick="droplist()" class="dbut ">About-us<i class="fa fa-caret-down"></i></button>
+        <button onclick="droplist()" class="dbut ">Home<i class="fa fa-caret-down"></i></button>
         <div id="mydroplist" class="drop-content">
-            <a href="../index.html">Home</a>
-            <a href="../Faq/faq.html">FAQ</a> 
-            <a href="../guides/guides.html">Guides</a>
+            <a href="/Faq/faq.html">FAQ</a> 
+            <a href="/guides/guides.html">Guides</a>
+            <a href="/aboutsus/aboutus.html">About-us</a>
         </div>
     </div>
     <h1 class="first-halls">Pub Halls</h1>
@@ -38,6 +37,11 @@
         </div>
         <div class="servers">
             <h1>Our server</h1>
+            <section><a href="www.discord.gg/losthalls" target="_blank" >
+                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img">
+                <h2 class="dn">Pub Halls</h2>
+                    </a>
+            </section>
         </div>
         <div class="something">
             <h1>something</h1>
