Been testing with api and js today, nothing special.

--- a/index.html
+++ b/index.html
@@ -36,11 +36,19 @@
             <h1>News</h1>
         </div>
         <div class="servers">
-            <h1>Our server</h1>
-            <section><a href="www.discord.gg/losthalls" target="_blank" >
+            <h1>Our servers</h1>
+            <section class="server-list"><a href="https://discord.gg/losthalls" target="_blank" >
                 <img src="/images/PHservericon.gif" alt="Phicon" class="server-img">
-                <h2 class="dn">Pub Halls</h2>
+                <p class="dn">Pub Halls</p>
                     </a>
+                <a href="https://discord.gg/BszDB3N" target="_blank" >
+                    <img src="/images/Classroom.webp" alt="classroom" class="server-img">
+                    <p class="dn">Class room</p>
+                </a>   
+                <a href="https://discord.gg/oryx" target="_blank" >
+                    <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img">
+                    <p class="dn">Oryx's Sanctuary</p>
+                </a>     
             </section>
         </div>
         <div class="something">
@@ -50,7 +58,7 @@
     <div class="scaler">
         <div class="afk">
             <h1>Afk Checks</h1>
-            <p>test</p>
+            <p><span id="afk-test"></span></p>
             <p>more test</p>
             <p>more test</p>
             <p>more test</p>
@@ -83,6 +91,6 @@
     <script type="text/javascript" src="js/particles.min.js"></script>
     <script type="text/javascript" src="js/custom.js"></script>
     <script src="java.js"></script>
-
+    
 </body>
 </html>
