some more tests.

--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
         <h1>Our servers</h1>
         <section class="server-list"><a href="https://discord.gg/losthalls" target="_blank">
                 <img src="/images/PHservericon.gif" alt="Phicon" class="server-img">
-                <p class="dn">Pub Halls</p>
+                <p class="dn"></p>
             </a>
             <a href="https://discord.gg/BszDB3N" target="_blank">
                 <img src="/images/Classroom.webp" alt="classroom" class="server-img">
-                <p class="dn">Class room</p>
+                <p class="dn"></p>
             </a>
             <a href="https://discord.gg/oryx" target="_blank">
                 <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img">
-                <p class="dn">Oryx's Sanctuary</p>
+                <p class="dn"></p>
             </a>
         </section>
     </div>
