--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 <main class="pusbal">
     <div class="afk" id="pend">
         <h1>Afk Checks</h1>
+        <div class="rbox"><p class="left">test test</p><p class="mid">6:00</p><p class="right">30/45</p></div>
     </div>
     <div class="runs" id="run">
         <h1>In Run</h1>
