--- a/index.html
+++ b/index.html
@@ -28,12 +28,14 @@
 <h1 class="first-halls">Pub Halls</h1>
 
 <main class="pusbal">
-    <div class="afk" id="pend">
+    <div class="afk">
         <h1>Afk Checks</h1>
-        <div class="rbox"><p class="left">test test</p><p class="mid">6:00</p><p class="right">30/45</p></div>
+        <div class="rbox "><p class="left">test test</p><p class="mid">6:00</p><p class="right">30/45</p></div>
+        <div id="pend"></div>
     </div>
-    <div class="runs" id="run">
+    <div class="runs" >
         <h1>In Run</h1>
+        <div id="run"></div>
     </div>
     <div class="news" id="news">
         <h1>News</h1>
