Some more work and polishing done.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="afk">
         <h1>Afk Checks</h1>
         <div class="rbox "><p class="left">test test</p><p class="mid">6:00</p><p class="right">30/45</p></div>
-        <div id="pend"></div>
+        <div id="afk"></div>
     </div>
     <div class="runs" >
         <h1>In Run</h1>
@@ -42,17 +42,18 @@
     </div>
     <div class="servers">
         <h1>Our servers</h1>
-        <section class="server-list"><a href="https://discord.gg/losthalls" target="_blank">
-                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img">
-                <p class="dn"></p>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
+                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
+                <a href="https://discord.gg/losthalls" target="_blank" class="server-section"><p class="dn">Pub Halls</p></a>
             </a>
-            <a href="https://discord.gg/BszDB3N" target="_blank">
-                <img src="/images/Classroom.webp" alt="classroom" class="server-img">
-                <p class="dn"></p>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section">
+                <img src="/images/Classroom.webp" alt="classroom" class="server-img"></a>
+                <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section"><p class="dn">Classroom</p></a>
             </a>
-            <a href="https://discord.gg/oryx" target="_blank">
-                <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img">
-                <p class="dn"></p>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section">
+                <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img"></a>
+                <a href="https://discord.gg/oryx" target="_blank" class="server-section"><p class="dn">Oryx Sanctuary</p></a>
             </a>
         </section>
     </div>
@@ -63,21 +64,12 @@
 <div class="scaler">
     <div class="afk">
         <h1>Afk Checks</h1>
-        <p><span id="afk-test"></span></p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-        <p>more test</p>
-
+    <div id="safk">
+    </div>
     </div>
     <div class="runs">
         <h1>In Run</h1>
+        <div id="srun"></div>
     </div>
     <div class="news" id="news">
         <h1>News</h1>
