Some more work done.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,20 @@
     </div>
     <div class="servers">
         <h1>Our server</h1>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
+                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
+                <a href="https://discord.gg/losthalls" target="_blank" class="server-section"><p class="dn">Pub Halls</p></a>
+            </a>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section">
+                <img src="/images/Classroom.webp" alt="classroom" class="server-img"></a>
+                <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section"><p class="dn">Classroom</p></a>
+            </a>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section">
+                <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img"></a>
+                <a href="https://discord.gg/oryx" target="_blank" class="server-section"><p class="dn">Oryx Sanctuary</p></a>
+            </a>
+        </section>
     </div>
     <div class="something">
         <h1>something</h1>
