Normal resolution home page is done!

--- a/index.html
+++ b/index.html
@@ -29,18 +29,38 @@
 
 <main class="pusbal">
     <div class="afk">
-        <h1>Afk Checks</h1>
+        <h1 class="head-title">Afk Checks</h1>
         <div id="afk"></div>
     </div>
     <div class="runs" >
-        <h1>In Run</h1>
+        <h1 class="head-title">In Run</h1>
         <div id="run"></div>
     </div>
     <div class="news" id="news">
-        <h1>News</h1>
+        <h1 class="head-title" id="bigNews">News</h1>
+        <div class="biggus top">
+            <h3>Rome loves ducks</h3>
+            <p>Who saw that coming...</p>
+        </div>
+        <div class="biggus">
+            <h3>Goids is too active for admin</h3>
+            <p>Demote on the way.</p>
+        </div>
+        <div class="biggus">
+            <h3>Deez</h3>
+            <p>Nuts.</p>
+        </div>
+        <div class="biggus">
+            <h3>Poky loves pusbals</h3>
+            <p>Who Doesn't?</p>
+        </div>
+        <div class="biggus">
+            <h3>Ran out of lines</h3>
+            <p>Atleast it's over.</p>
+        </div>
     </div>
     <div class="servers">
-        <h1>Our servers</h1>
+        <h1 class="head-title">Our servers</h1>
         <section class="server-list">
             <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
                 <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
@@ -57,7 +77,9 @@
         </section>
     </div>
     <div class="something">
-        <h1>something</h1>
+        <p id="something">Got a question or some feedback perhaps?</p>
+        <p id="something-two">Mail it to our</p>
+        <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
     </div>
 </main>
 <div class="scaler">
