--- a/index.html
+++ b/index.html
@@ -30,10 +30,12 @@
 <main class="pusbal">
     <div class="afk">
         <h1 class="head-title">Afk Checks</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
         <div id="afk"></div>
     </div>
     <div class="runs" >
         <h1 class="head-title">In Run</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
         <div id="run"></div>
     </div>
     <div class="news" id="news">
@@ -78,25 +80,27 @@
     </div>
     <div class="something">
         <p id="something">Got a question or some feedback perhaps?</p>
-        <p id="something-two">Mail it to our</p>
+        <p id="something-two">Send it to our</p>
         <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
     </div>
 </main>
 <div class="scaler">
     <div class="afk">
-        <h1>Afk Checks</h1>
+        <h1 class="head-title">Afk Checks</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
     <div id="safk">
     </div>
     </div>
     <div class="runs">
-        <h1>In Run</h1>
+        <h1 class="head-title">In Run</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
         <div id="srun"></div>
     </div>
     <div class="news" id="news">
-        <h1>News</h1>
+        <h1 class="head-title">News</h1>
     </div>
-    <div class="servers">
-        <h1>Our server</h1>
+    <div class="servers D">
+        <h1 class="head-title">Our servers</h1>
         <section class="server-list">
             <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
                 <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
@@ -112,8 +116,32 @@
             </a>
         </section>
     </div>
+    <div class="servers V">
+        <h1 class="head-title">Our servers</h1>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
+                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
+           
+            </a>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section">
+                <img src="/images/Classroom.webp" alt="classroom" class="server-img"></a>
+
+            </a>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section">
+                <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img"></a>
+
+            </a>
+        </section>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section"><p class="dn server-text">Pub Halls</p></a>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section"><p class="dn server-text">Classroom</p></a>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section"><p class="dn server-text">Oryx Sanctuary</p></a>
+        </section>
+    </div>
     <div class="something">
-        <h1>something</h1>
+        <p id="something">Got a question or some feedback perhaps?</p>
+        <p id="something-two">Send it to our</p>
+        <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
     </div>
 </div>
 
