Homepage is done, only Navbar left.

--- a/index.html
+++ b/index.html
@@ -98,6 +98,26 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
+        <div class="biggus top">
+            <h3>Rome loves ducks</h3>
+            <p>Who saw that coming...</p>
+        </div>
+        <div class="biggus">
+            <h3>Goids is too active for admin</h3>
+            <p>Demote on the way.</p>
+        </div>
+        <div class="biggus">
+            <h3>Deez</h3>
+            <p>Nuts.</p>
+        </div>
+        <div class="biggus">
+            <h3>Poky loves pusbals</h3>
+            <p>Who Doesn't?</p>
+        </div>
+        <div class="biggus">
+            <h3>Ran out of lines</h3>
+            <p>Atleast it's over.</p>
+        </div>
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
