--- a/aboutsus/aboutus.html
+++ b/aboutsus/aboutus.html
@@ -32,7 +32,7 @@
         <p>a place where we provide high quality raiding 24/7 that includes all kinds of exaltation and miscellaneous dungeons.</p>
         <h3>Who are we?</h3>
         <p>The Pub Halls staff team is a volunteer based community where everyone invests their time to improve the experience that you get here, a group of different minded yet open minded people that strives for improvement.</p>
-        
+        <h3>More text...</h3>
     </div>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
