--- a/y/index.html
+++ b/y/index.html
@@ -1,89 +1,177 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to Firebase Hosting</title>
+<html lang="en">
 
-    <!-- update the version number as needed -->
-    <script defer src="/__/firebase/9.14.0/firebase-app-compat.js"></script>
-    <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/9.14.0/firebase-auth-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-database-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-firestore-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-functions-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-messaging-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-storage-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-analytics-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-remote-config-compat.js"></script>
-    <script defer src="/__/firebase/9.14.0/firebase-performance-compat.js"></script>
-    <!-- 
-      initialize the SDK after all desired features are loaded, set useEmulator to false
-      to avoid connecting the SDK to running emulators.
-    -->
-    <script defer src="/__/firebase/init.js?useEmulator=true"></script>
-
-    <style media="screen">
-      body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
-      #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
-      #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
-      #message h1 { font-size: 22px; font-weight: 300; color: rgba(0,0,0,0.6); margin: 0 0 16px;}
-      #message p { line-height: 140%; margin: 16px 0 24px; font-size: 14px; }
-      #message a { display: block; text-align: center; background: #039be5; text-transform: uppercase; text-decoration: none; color: white; padding: 16px; border-radius: 4px; }
-      #message, #message a { box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24); }
-      #load { color: rgba(0,0,0,0.4); text-align: center; font-size: 13px; }
-      @media (max-width: 600px) {
-        body, #message { margin-top: 0; background: white; box-shadow: none; }
-        body { border-top: 16px solid #ffa100; }
-      }
-    </style>
-  </head>
-  <body>
-    <div id="message">
-      <h2>Welcome</h2>
-      <h1>Firebase Hosting Setup Complete</h1>
-      <p>You're seeing this because you've successfully setup Firebase Hosting. Now it's time to go build something extraordinary!</p>
-      <a target="_blank" href="https://firebase.google.com/docs/hosting/">Open Hosting Documentation</a>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pub Halls</title>
+    <link rel="stylesheet" type="text/css" href="main.css">
+</head>
+<div id="bg"></div>
+<div class="navbar">
+    <img src="images/PubHallsLogo.png" alt="PubHallsLogo">
+    <a class="current" href="index.html">Home</a>
+    <a href="Faq/faq.html">FAQ</a>
+    <a href="guides/guides.html">Guides</a>
+    <a href="aboutsus/aboutus.html">About-us</a>
+</div>
+<div class="small">
+    <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
+    <button onclick="droplist()" class="dbut ">Home</button>
+    <div id="mydroplist" class="drop-content">
+        <a href="/Faq/faq.html">FAQ</a>
+        <a href="/guides/guides.html">Guides</a>
+        <a href="/aboutsus/aboutus.html">About-us</a>
     </div>
-    <p id="load">Firebase SDK Loading&hellip;</p>
+</div>
+<h1 class="first-halls">Pub Halls</h1>
 
-    <script>
-      document.addEventListener('DOMContentLoaded', function() {
-        const loadEl = document.querySelector('#load');
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
-        // // The Firebase SDK is initialized and available here!
-        //
-        // firebase.auth().onAuthStateChanged(user => { });
-        // firebase.database().ref('/path/to/ref').on('value', snapshot => { });
-        // firebase.firestore().doc('/foo/bar').get().then(() => { });
-        // firebase.functions().httpsCallable('yourFunction')().then(() => { });
-        // firebase.messaging().requestPermission().then(() => { });
-        // firebase.storage().ref('/path/to/ref').getDownloadURL().then(() => { });
-        // firebase.analytics(); // call to activate
-        // firebase.analytics().logEvent('tutorial_completed');
-        // firebase.performance(); // call to activate
-        //
-        // // 🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥🔥
+<main class="pusbal">
+    <div class="afk">
+        <h1 class="head-title">Afk Checks</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
+        <div id="afk"></div>
+    </div>
+    <div class="runs" >
+        <h1 class="head-title">In Run</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
+        <div id="run"></div>
+    </div>
+    <div class="news" id="news">
+        <h1 class="head-title" id="bigNews">News</h1>
+        <div class="biggus top">
+            <h3>Rome loves ducks</h3>
+            <p>Who saw that coming...</p>
+        </div>
+        <div class="biggus">
+            <h3>Goids is too active for admin</h3>
+            <p>Demote on the way.</p>
+        </div>
+        <div class="biggus">
+            <h3>Deez</h3>
+            <p>Nuts.</p>
+        </div>
+        <div class="biggus">
+            <h3>Poky loves pusbals</h3>
+            <p>Who Doesn't?</p>
+        </div>
+        <div class="biggus">
+            <h3>Ran out of lines</h3>
+            <p>Atleast it's over.</p>
+        </div>
+    </div>
+    <div class="servers">
+        <h1 class="head-title">Our servers</h1>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
+                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
+                <a href="https://discord.gg/losthalls" target="_blank" class="server-section"><p class="dn">Pub Halls</p></a>
+            </a>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section">
+                <img src="/images/Classroom.webp" alt="classroom" class="server-img"></a>
+                <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section"><p class="dn">Classroom</p></a>
+            </a>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section">
+                <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img"></a>
+                <a href="https://discord.gg/oryx" target="_blank" class="server-section"><p class="dn">Oryx Sanctuary</p></a>
+            </a>
+        </section>
+    </div>
+    <div class="something">
+        <p id="something">Got a question or some feedback perhaps?</p>
+        <p id="something-two">Send it to our</p>
+        <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
+    </div>
+</main>
+<div class="scaler">
+    <div class="afk">
+        <h1 class="head-title">Afk Checks</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
+    <div id="safk">
+    </div>
+    </div>
+    <div class="runs">
+        <h1 class="head-title">In Run</h1>
+        <p class="under">(Click on the AFK to jump to it!)</p>
+        <div id="srun"></div>
+    </div>
+    <div class="news" id="news">
+        <h1 class="head-title">News</h1>
+        <div class="biggus top">
+            <h3>Rome loves ducks</h3>
+            <p>Who saw that coming...</p>
+        </div>
+        <div class="biggus">
+            <h3>Goids is too active for admin</h3>
+            <p>Demote on the way.</p>
+        </div>
+        <div class="biggus">
+            <h3>Deez</h3>
+            <p>Nuts.</p>
+        </div>
+        <div class="biggus">
+            <h3>Poky loves pusbals</h3>
+            <p>Who Doesn't?</p>
+        </div>
+        <div class="biggus">
+            <h3>Ran out of lines</h3>
+            <p>Atleast it's over.</p>
+        </div>
+    </div>
+    <div class="servers D">
+        <h1 class="head-title">Our servers</h1>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
+                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
+                <a href="https://discord.gg/losthalls" target="_blank" class="server-section"><p class="dn">Pub Halls</p></a>
+            </a>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section">
+                <img src="/images/Classroom.webp" alt="classroom" class="server-img"></a>
+                <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section"><p class="dn">Classroom</p></a>
+            </a>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section">
+                <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img"></a>
+                <a href="https://discord.gg/oryx" target="_blank" class="server-section"><p class="dn">Oryx Sanctuary</p></a>
+            </a>
+        </section>
+    </div>
+    <div class="servers V">
+        <h1 class="head-title">Our servers</h1>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section">
+                <img src="/images/PHservericon.gif" alt="Phicon" class="server-img"></a>
+           
+            </a>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section">
+                <img src="/images/Classroom.webp" alt="classroom" class="server-img"></a>
 
-        try {
-          let app = firebase.app();
-          let features = [
-            'auth', 
-            'database', 
-            'firestore',
-            'functions',
-            'messaging', 
-            'storage', 
-            'analytics', 
-            'remoteConfig',
-            'performance',
-          ].filter(feature => typeof app[feature] === 'function');
-          loadEl.textContent = `Firebase SDK loaded with ${features.join(', ')}`;
-        } catch (e) {
-          console.error(e);
-          loadEl.textContent = 'Error loading the Firebase SDK, check the console.';
-        }
-      });
-    </script>
-  </body>
+            </a>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section">
+                <img src="/images/Osanc.gif" alt="O-sanctuary" class="server-img"></a>
+
+            </a>
+        </section>
+        <section class="server-list">
+            <a href="https://discord.gg/losthalls" target="_blank" class="server-section"><p class="dn server-text">Pub Halls</p></a>
+            <a href="https://discord.gg/BszDB3N" target="_blank" class="server-section"><p class="dn server-text">Classroom</p></a>
+            <a href="https://discord.gg/oryx" target="_blank" class="server-section"><p class="dn server-text">Oryx Sanctuary</p></a>
+        </section>
+    </div>
+    <div class="something">
+        <p id="something">Got a question or some feedback perhaps?</p>
+        <p id="something-two">Send it to our</p>
+        <a href="https://discord.com/channels/343704644712923138/526466244333797408" target="_blank" class="dn">ModMail!</a>
+    </div>
+</div>
+
+
+
+<script src="java.js"></script>
+<script type="text/javascript" src="js/particles.min.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
+
+
+</body>
+
 </html>
