--- a/public/guides/guides.html
+++ b/public/guides/guides.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pub Halls</title>
     <link rel="stylesheet" type="text/css" href="guides.css">
-    <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
 </head>
 <body>
     <div id="bg"></div>
