--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
     <title>Pub Halls</title>
     <link rel="stylesheet" type="text/css" href="main.css">
     <link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+    <meta content="Pub Halls" property="og:title" />
+    <meta content="Pubhalls official website" property="og:description" />
+    <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <div id="bg"></div>
 <div class="navbar">
