--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <meta content="Pub Halls" property="og:title" />
     <meta content="Pubhalls official website" property="og:description" />
     <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
-    <meta content="https://embed.com/embedimage.png" property="og:image" />
+    <meta content="https://i.imgur.com/s8tkTk4.png" property="og:image" />
     <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <div id="bg"></div>
