Wrong link to a page in small screen navbar on guides tab.

--- a/public/guides/guides.html
+++ b/public/guides/guides.html
@@ -23,7 +23,7 @@
         <div id="mydroplist" class="drop-content">
             <a href="../index.html">Home</a>
             <a href="../Faq/faq.html">FAQ</a> 
-            <a href="../guides/guides.html">About-us</a>
+            <a href="../aboutsus/aboutus.html">About-us</a>
         </div>
     </div>
     <h1 class="first-halls">Pub Halls</h1>
