--- a/guides/guides.html
+++ b/guides/guides.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pub Halls</title>
     <link rel="stylesheet" type="text/css" href="guides.css">
+    <link rel="shortcut icon" type="image/x-icon" href="../images/favicon.ico">
+    <meta content="Pub Halls" property="og:title" />
+    <meta content="Pubhalls official website" property="og:description" />
+    <meta content="https://pubhalls.com" property="og:url" />
+    <meta content="https://i.imgur.com/s8tkTk4.png" property="og:image" />
+    <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
     <div id="bg"></div>
