--- a/public/Faq/faq.html
+++ b/public/Faq/faq.html
@@ -20,7 +20,7 @@
        <a href="../index.html">Home</a>
        <a class="current" href="faq.html">FAQ</a>
        <a href="../guides/guides.html">Guides</a>
-       <a href="../aboutsus/aboutus.html">About-us</a>
+
     </div>
     <div class="small">
         <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
@@ -28,7 +28,7 @@
         <div id="mydroplist" class="drop-content">
             <a href="../index.html">Home</a>
             <a href="../guides/guides.html">Guides</a> 
-            <a href="../aboutsus/aboutus.html">About-us</a>
+
         </div>
     </div>
     <h1 class="first-halls">Pub Halls</h1>
@@ -65,7 +65,7 @@
             <h3 class="underline">Why won't the Raid Leader move me in?</h3>
             <p class="spaceforheader">Raid leaders are not allowed to move raiders into the voice channel unless absolutely necessary in order to ensure the HP scaling of the dungeon stays at a reasonable and achievable limit. If you missed the run, wait for another to start.</p>
             <!--Suspensions section.-->
-            <h2><span>SUSPENSIONS</span></h2>
+            <h2><span class="sus">SUSPENSIONS</span></h2>
             <h3 class="underline">Why was I suspended?</h3>
             <p>You were suspended because a staff member believed you were breaking a rule. You can find who suspended you by looking in <a href="https://discord.com/channels/343704644712923138/384237088033341443" target="_blank" class="dn">#suspend-log</a>, and you may dispute your suspension by contacting the person who issued the suspension.</p>
             <h3 class="underline">I have been permanently suspended for being in a blacklisted guild. How do I appeal?</h3>
