--- a/public/index.html
+++ b/public/index.html
@@ -44,25 +44,29 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
+        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
         <div class="biggus top">
-            <h3>Rome loves ducks</h3>
-            <p>Who saw that coming...</p>
+            <h3>1.5x XP for halls is on!</h3>
+            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout has 1.5xXP.</p>
+        </div>
+         </a>
+        <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+        <div class="biggus"> 
+            <h3>Seasnal section is out now!</h3>
+            <p>Have a better seasonal char experience while playing with others.</p>
+        </div>
+        </a>
+        <div class="biggus">
+            <h3>Just a beggining..</h3>
+            <p>More is on the way.</p>
         </div>
         <div class="biggus">
-            <h3>Goids is too active for admin</h3>
-            <p>Demote on the way.</p>
+            <h3></h3>
+            <p></p>
         </div>
         <div class="biggus">
-            <h3>Deez</h3>
-            <p>Nuts.</p>
-        </div>
-        <div class="biggus">
-            <h3>Poky loves pusbals</h3>
-            <p>Who Doesn't?</p>
-        </div>
-        <div class="biggus">
-            <h3>Ran out of lines</h3>
-            <p>Atleast it's over.</p>
+            <h3></h3>
+            <p></p>
         </div>
     </div>
     <div class="servers">
@@ -102,26 +106,30 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
-        <div class="biggus top">
-            <h3>Rome loves ducks</h3>
-            <p>Who saw that coming...</p>
-        </div>
-        <div class="biggus">
-            <h3>Goids is too active for admin</h3>
-            <p>Demote on the way.</p>
-        </div>
-        <div class="biggus">
-            <h3>Deez</h3>
-            <p>Nuts.</p>
-        </div>
-        <div class="biggus">
-            <h3>Poky loves pusbals</h3>
-            <p>Who Doesn't?</p>
-        </div>
-        <div class="biggus">
-            <h3>Ran out of lines</h3>
-            <p>Atleast it's over.</p>
-        </div>
+        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+            <div class="biggus top">
+                <h3>1.5x XP for halls is on!</h3>
+                <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout has 1.5xXP.</p>
+            </div>
+             </a>
+            <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+            <div class="biggus"> 
+                <h3>Seasnal section is out now!</h3>
+                <p>Have a better seasonal char experience while playing with others!</p>
+            </div>
+            </a>
+            <div class="biggus">
+                <h3>Just a beggining..</h3>
+                <p>More is on the way.</p>
+            </div>
+            <div class="biggus">
+                <h3></h3>
+                <p></p>
+            </div>
+            <div class="biggus">
+                <h3></h3>
+                <p></p>
+            </div>
     </div>
     <div class="servers D">
         <h1 class="head-title">Our servers</h1>
