A decorate fix attempt x4

--- a/public/index.html
+++ b/public/index.html
@@ -44,13 +44,13 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title" id="bigNews">News</h1>
-        <a class="newsA" href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
         <div class="biggus top">
             <h3>1.5x XP for halls is on!</h3>
             <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout has 1.5xXP.</p>
         </div>
          </a>
-        <a class="newsA" href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+        <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
         <div class="biggus"> 
             <h3>Seasnal section is out now!</h3>
             <p>Have a better seasonal char experience while playing with others.</p>
@@ -106,13 +106,13 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
-        <a class="newsA" href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+        <a  href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
         <div class="biggus top">
             <h3>1.5x XP for halls is on!</h3>
             <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout has 1.5xXP.</p>
         </div>
          </a>
-         <a class="newsA" href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
          <div class="biggus"> 
             <h3>Seasnal section is out now!</h3>
             <p>Have a better seasonal char experience while playing with others!</p>
