--- a/public/index.html
+++ b/public/index.html
@@ -47,7 +47,7 @@
         <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
         <div class="biggus top">
             <h3>1.5x XP for halls is on!</h3>
-            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout has 1.5xXP.</p>
+            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
         </div>
          </a>
         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
@@ -109,7 +109,7 @@
         <a  href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
         <div class="biggus top">
             <h3>1.5x XP for halls is on!</h3>
-            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout has 1.5xXP.</p>
+            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
         </div>
          </a>
          <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
