--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
          </a>
         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
         <div class="biggus"> 
-            <h3>Seasnal section is out now!</h3>
+            <h3>Seasonal section is out now!</h3>
             <p>Have a better seasonal char experience while playing with others.</p>
         </div>
         </a>
@@ -114,7 +114,7 @@
          </a>
          <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
          <div class="biggus"> 
-            <h3>Seasnal section is out now!</h3>
+            <h3>Seasonal section is out now!</h3>
             <p>Have a better seasonal char experience while playing with others!</p>
          </div>
         </a>
