--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
          </a>
         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
         <div class="biggus"> 
-            <h3>Seasnal section is out now!</h3>
+            <h3>Seasonal section is out now!</h3>
             <p>Have a better seasonal char experience while playing with others.</p>
         </div>
         </a>
         <div class="biggus">
-            <h3>Just a beggining..</h3>
+            <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
         <div class="biggus">
@@ -106,23 +106,23 @@
     </div>
     <div class="news" id="news">
         <h1 class="head-title">News</h1>
-        <a href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
-            <div class="biggus top">
-                <h3>1.5x XP for halls is on!</h3>
-                <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
-            </div>
-             </a>
-            <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
-            <div class="biggus"> 
-                <h3>Seasnal section is out now!</h3>
-                <p>Have a better seasonal char experience while playing with others!</p>
-            </div>
-            </a>
-            <div class="biggus">
-                <h3>Just a beggining..</h3>
-                <p>More is on the way.</p>
-            </div>
-            <div class="biggus">
+        <a  href="discord://discordapp.com/channels/230500411835023362/230500411835023362/1044583599942402148" target="_blank">
+        <div class="biggus top">
+            <h3>1.5x XP for halls is on!</h3>
+            <p>Untill the 5th of December Lost halls, The Void and The Cultist hideout have 1.5x XP.</p>
+        </div>
+         </a>
+         <a href="discord://discordapp.com/channels/343704644712923138/476472964288610304/1045005187036741782"  target="_blank">
+         <div class="biggus"> 
+            <h3>Seasonal section is out now!</h3>
+            <p>Have a better seasonal char experience while playing with others!</p>
+         </div>
+        </a>
+        <div class="biggus">
+            <h3>Just a beginning..</h3>
+            <p>More is on the way.</p>
+        </div>
+        <div class="biggus">
                 <h3></h3>
                 <p></p>
             </div>
