--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
         </div>
         </a>
         <div class="biggus">
-            <h3>Just a beggining..</h3>
+            <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
         <div class="biggus">
@@ -119,7 +119,7 @@
          </div>
         </a>
         <div class="biggus">
-            <h3>Just a beggining..</h3>
+            <h3>Just a beginning..</h3>
             <p>More is on the way.</p>
         </div>
         <div class="biggus">
