Mapgen is now functional, needs customizations.

--- a/Map gen/mapgen.html
+++ b/Map gen/mapgen.html
@@ -38,7 +38,7 @@
             <a href="../guides/guides.html">Guides</a>
         </div>
     </div>
-    <h1 class="first-halls"></h1>
+    <h1 class="first-halls">Pub Halls</h1>
     <div class="box">
         <main>
             <main>
@@ -162,7 +162,6 @@
     </div>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
-    <script src="../java.js"></script>
 
 </body>
 </html>
