--- a/Map gen/mapgen.html
+++ b/Map gen/mapgen.html
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div id="buttons">
-                        <button type="button" onclick="lhmap.setup()" class="img-btn" title="New Map" id="dn">
+                        <button type="button" onclick="lhmap.setup()" class="img-btn" title="New Map" id="dn" class="dn">
                             <img src="images/map.png" alt="M" class="dn"/>
                         </button>
                         <button type="button" onclick="showImage(); lhmap.paint()" class="img-btn" title="Copy Map Image">
