--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a class="current" href="index.html">Home</a>
     <a href="Faq/faq.html">FAQ</a>
     <a href="guides/guides.html">Guides</a>
+    <a href="mapGen/mapgen.html">Map-Gen</a>
 </div>
 <div class="small">
     <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
@@ -27,6 +28,7 @@
     <div id="mydroplist" class="drop-content">
         <a href="/Faq/faq.html">FAQ</a>
         <a href="/guides/guides.html">Guides</a>
+        <a href="mapGen/mapgen.html">Map-Gen</a>
     </div>
 </div>
 <h1 class="first-halls">Pub Halls</h1>
