--- a/Faq/faq.html
+++ b/Faq/faq.html
@@ -20,6 +20,7 @@
        <a href="../index.html">Home</a>
        <a class="current" href="faq.html">FAQ</a>
        <a href="../guides/guides.html">Guides</a>
+       <a href="../mapGen/mapgen.html">Map-Gen</a>
 
     </div>
     <div class="small">
@@ -28,6 +29,7 @@
         <div id="mydroplist" class="drop-content">
             <a href="../index.html">Home</a>
             <a href="../guides/guides.html">Guides</a> 
+            <a href="../mapGen/mapgen.html">Map-Gen</a>
 
         </div>
     </div>
@@ -91,6 +93,5 @@
     </main>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
-    <script src="../java.js"></script>
 </body>
 </html>
