--- a/public/guides/guides.html
+++ b/public/guides/guides.html
@@ -20,6 +20,7 @@
        <a href="../index.html">Home</a>
        <a href="../Faq/faq.html">FAQ</a>
        <a class="current" href="guides.html">Guides</a>
+       <a href="../mapGen/mapgen.html">Map-Gen</a>
     </div>
     <div class="small">
         <img src="../images/PubHallsLogo.png" alt="PubHallsLogo">
@@ -27,6 +28,7 @@
         <div id="mydroplist" class="drop-content">
             <a href="../index.html">Home</a>
             <a href="../Faq/faq.html">FAQ</a> 
+            <a href="../mapGen/mapgen.html">Map-Gen</a>
         </div>
     </div>
     <h1 class="first-halls">Pub Halls</h1>
@@ -37,7 +39,6 @@
     </div>
     <script type="text/javascript" src="../js/particles.min.js"></script>
     <script type="text/javascript" src="../js/custom.js"></script>
-    <script src="../java.js"></script>
 
 </body>
 </html>
